--- a/index.html
+++ b/index.html
@@ -172,5 +172,5 @@
           </div>  
         </form> 
     </body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+ <!--   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </html>    
